--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -37,8 +37,8 @@ spring:
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:postgresql://localhost:5432/smartjournal
-        username: smartjournal
-        password:
+        username: postgres
+        password: password
         hikari:
             auto-commit: false
     jpa:
