ManyToMany subject group

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -31,11 +31,13 @@ spring:
         database: POSTGRESQL
         show-sql: true
         properties:
-            hibernate.id.new_generator_mappings: true
-            hibernate.connection.provider_disables_autocommit: true
-            hibernate.cache.use_second_level_cache: false
-            hibernate.cache.use_query_cache: false
-            hibernate.generate_statistics: true
+            hibernate:
+                id.new_generator_mappings: true
+                connection.provider_disables_autocommit: true
+                cache.use_second_level_cache: false
+                cache.use_query_cache: false
+                generate_statistics: true
+#                format_sql: true
     liquibase:
         contexts: dev
     mail:
