--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -37,7 +37,7 @@ spring:
                 cache.use_second_level_cache: false
                 cache.use_query_cache: false
                 generate_statistics: true
-#                format_sql: true
+                format_sql: true
     liquibase:
         contexts: dev
     mail:
