--- a/package.json
+++ b/package.json
@@ -50,7 +50,11 @@
     "html-webpack-plugin": "3.2.0",
     "merge-jsons-webpack-plugin": "1.0.14",
     "mini-css-extract-plugin": "0.4.2",
+    "postcss-loader": "2.1.6",
+    "prettier": "^1.15.3",
     "rimraf": "2.6.1",
+    "sass": "1.13.0",
+    "sass-loader": "7.1.0",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "0.20.3",
     "thread-loader": "1.1.5",
@@ -60,10 +64,6 @@
     "tslint-config-prettier": "1.15.0",
     "tslint-loader": "3.6.0",
     "typescript": "3.1.3",
-    "sass": "1.13.0",
-    "sass-loader": "7.1.0",
-    "postcss-loader": "2.1.6",
-    "xml2js": "0.4.19",
     "webpack": "4.25.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10",
@@ -71,7 +71,8 @@
     "webpack-notifier": "1.7.0",
     "webpack-visualizer-plugin": "0.1.11",
     "workbox-webpack-plugin": "3.6.3",
-    "write-file-webpack-plugin": "4.4.1"
+    "write-file-webpack-plugin": "4.4.1",
+    "xml2js": "0.4.19"
   },
   "engines": {
     "node": ">=8.9.0"
