--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "merge-jsons-webpack-plugin": "1.0.14",
     "mini-css-extract-plugin": "0.4.2",
     "postcss-loader": "2.1.6",
-    "prettier": "^1.15.3",
+    "prettier": "1.15.3",
     "rimraf": "2.6.1",
     "sass": "1.13.0",
     "sass-loader": "7.1.0",
