--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
+    "kaop-ts": "^4.1.1",
     "ng-jhipster": "0.5.6",
     "ngx-cookie": "2.0.1",
     "ngx-infinite-scroll": "6.0.1",
