add prod dependencies

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -33,6 +33,8 @@
     "languages": [
       "ua",
       "en"
-    ]
+    ],
+    "herokuAppName": "smartjournal",
+    "herokuDeployType": "git"
   }
 }
