--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@angular/cli": "7.0.2",
     "@angular/compiler-cli": "7.0.0",
+    "@ngtools/webpack": "7.0.2",
     "@types/node": "9.4.7",
     "angular-router-loader": "0.8.5",
     "angular2-template-loader": "0.6.2",
@@ -51,6 +52,8 @@
     "html-webpack-plugin": "3.2.0",
     "merge-jsons-webpack-plugin": "1.0.14",
     "mini-css-extract-plugin": "0.4.2",
+    "moment-locales-webpack-plugin": "1.0.5",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "2.1.6",
     "prettier": "1.15.3",
     "rimraf": "2.6.1",
@@ -58,6 +61,7 @@
     "sass-loader": "7.1.0",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "0.20.3",
+    "terser-webpack-plugin": "1.0.0",
     "thread-loader": "1.1.5",
     "to-string-loader": "1.1.5",
     "ts-loader": "4.5.0",
@@ -85,13 +89,18 @@
     ]
   },
   "scripts": {
+    "prettier:format": "prettier --write \"src/**/*.{json,ts,css,scss}\"",
     "lint": "tslint --project tsconfig.json -e 'node_modules/**'",
     "lint:fix": "npm run lint -- --fix",
+    "ngc": "ngc -p tsconfig-aot.json",
     "cleanup": "rimraf target/{aot,www}",
+    "clean-www": "rimraf target//www/app/{src,target/}",
     "start": "npm run webpack:dev",
     "start-tls": "npm run webpack:dev -- --env.tls",
     "serve": "npm run start",
     "build": "npm run webpack:prod",
+    "test": "npm run lint && jest --coverage --logHeapUsage -w=2 --config src/test/javascript/jest.conf.js",
+    "test:watch": "npm run test -- --watch",
     "webpack:dev": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --hot --port=9060 --watch-content-base --env.stats=minimal",
     "webpack:dev-verbose": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --hot --port=9060 --watch-content-base --profile --progress --env.stats=normal",
     "webpack:build:main": "npm run webpack -- --config webpack/webpack.dev.js --env.stats=minimal",
