--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -20,12 +20,16 @@ spring:
         serialization:
             indent-output: true
     datasource:
-        type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/smartjournal
-        username: postgres
-        password: password
-        hikari:
-            auto-commit: false
+#        type: com.zaxxer.hikari.HikariDataSource
+#        url: jdbc:postgresql://localhost:5432/smartjournal
+#        username: postgres
+#        password: password
+#        hikari:
+#            auto-commit: false
+            url: ${DATABASE_URL}
+            username: ${JDBC_DATABASE_USERNAME}
+            password: ${SPRING_DATASOURCE_PASSWORD}
+
     jpa:
         database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
