--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -56,7 +56,7 @@ spring:
         cache: false
 
 server:
-    port: 8080
+    port: ${PORT:5000}
 
 # ===================================================================
 # JHipster specific properties
